# trading-system

./: README.md  analysis_candle_vs_signals.py  pyproject.toml
config/: instruments.yaml  risk.yaml  system.yaml
data/instrument-data/: filter_instruments.py  nifty_banknifty.json
docs/: ARCHITECTURE.md  RUNBOOK.md
scripts/: run_eod.sh  run_intraday.sh  run_pre_market.sh  run_weekly_research.sh
src/trading_system/: __init__.py  cli.py  config.py  orchestrator.py  state.py
src/trading_system/agents/: macro_agent.py  micro_agent.py  microstructure_agent.py  research_agent.py  risk_agent.py  snapshot_io.py
src/trading_system/analysis/: microstructure.py  option_math.py  score_aggregator.py
src/trading_system/data/: upstox.py
src/trading_system/paper_trade/: engine.py
src/trading_system/persistence/: schemas.py  store.py
src/trading_system/reporting/: daily_report.py  trade_card.py
src/trading_system/risk/: pnl_tracker.py  sizer.py  stop_logic.py
tests/: test_option_math.py  test_score_aggregator.py  test_sizer.py
